Implement New Places Api (DEV-239, DEV-2365) (#1858)
* React native autocomplete and move to new places apei

* Revert

* Some more cleanup

* Cleanup

* Remove csrf exempt

* Remove unused deps

* Merge location map modal

* Typechecks

* More cleanup

* chore: split map modal refactor into separate branch, restore original modal with new api

* chore: formatting fix

* PR comments

* another address_components

* Map modal refactor (#1861)

* More cleanup

* Cleanup

* Reverte geocode

* No need for nest yet

---------

Co-authored-by: Mike Feldberg <mike@betterangels.la>

--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -107,7 +107,12 @@
     "jwt-decode": "*",
     "@preeternal/react-native-cookie-manager": "*",
     "@tanstack/react-query": "*",
-    "mime": "*"
+    "mime": "*",
+    "react-native-google-places-autocomplete": "*",
+    "react-router-dom": "*",
+    "clsx": "*",
+    "tailwind-merge": "*",
+    "lodash": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
